[package]
name = "binding_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib", "rlib"]

[dependencies]
uniffi = { version = "0.28.0", features = ["tokio", "cli"] }
uniffi_macros = "0.28.0"
thiserror = {workspace = true}
# o_thi_offline_search ={ workspace = true}
ermis-call-node = { workspace = true }

anyhow = "1.0"
base64 = "0.21"
futures = "0.3"
iroh = { version = "0.x" }  # Thay bằng version bạn đang dùng
iroh-quinn-proto = { version = "0.x" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bitcode = "0.6.7"
# thiserror = "1.0"




[build-dependencies]
uniffi = { version = "0.28.0", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin.rs"
