[package]
name = "ermis_call_node_binding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
uniffi = { version = "0.28.0", features = ["tokio", "cli"] }
uniffi_macros = "0.28.0"

# o_thi_offline_search ={ workspace = true}
fmp4_demuxer_lib = { workspace = true }

bytes = "1.11.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
mp4-atom = "0.9.1"





[build-dependencies]
uniffi = { version = "0.28.0", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin.rs"
